<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Rahul Kashyap</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">Hi, my name is Rahul Kashyap.
    \n\nI love fish.
    \n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
    \nFun fact is that I have several aquariums and also a river.
    \n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
    \nAnd sometimes I even go fishing.
    \nAnd even less sometimes, I actually catch something.
    \n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
    \n\nI\'ll be happy to teach you how to make your own aquarium.</string>
    <string name="my_profile_photo">My Profile Photo</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">DONE</string>
</resources>